--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,4 +1,4 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h1>This is the new about page!</h1>
+    <h1>Welcome to FrogRate - your spot for anime and manga ratings!🐸🌟</h1>
 {% endblock content%}
