--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -5,18 +5,17 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4"> <b>Join FrogRate</b>  🐸🖊️</legend>
                 {{ form|crispy }} 
             </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
-
+            <div class="form-group pt-3 pb-3">
+                <button class="btn btn-outline-success btn-sm" type="submit"><b>Sign Up</b></button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
                 Already have an account? 
-                <a class="ml-2" href="#"> Sign in</a>
+                <a class="ml-2" href="#"><b>Sign in</b></a>
             </small>
         </div>
     </div>
