--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -34,7 +34,7 @@
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav loginregister-sub">
-                <a class="nav-item nav-link" href="#">Login</a>
+                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                 <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
               </div>
             </div>
