--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,17 +5,17 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4"> <b>Join FrogRate</b>  🐸🖊️</legend>
+                <legend class="border-bottom mb-4"> <b>Log In</b>  🐸⭐</legend>
                 {{ form|crispy }} 
             </fieldset>
             <div class="form-group pt-3 pb-3">
-                <button class="btn btn-outline-success btn-sm" type="submit"><b>Sign Up</b></button>
+                <button class="btn btn-outline-success btn-sm" type="submit"><b>Log In</b></button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already have an account? 
-                <a class="ml-2" href="{% url 'login' %}"><b>Sign in!</b></a>
+                Need an account? 
+                <a class="ml-2" href="{% url 'register' %}"><b>Sign Up!</b></a>
             </small>
         </div>
     </div>
