created profile and user 1-to-1 relation & profile photo

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h1>Welcome to FrogRate - your spot for anime and manga ratings!🐸🌟</h1>
+    <h1>Welcome to CriticalRate!🐸🌟</h1>
+    <h3>A blog-alike app to write series reviews.</h3>
 {% endblock content%}
