--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,9 +12,9 @@
 
     <!-- In common content -->
     {% if title %}
-        <title>Django Blog - {{ title }}</title>
+        <title>CriticalFrog - {{ title }}</title>
     {% else %}
-        <title>FrogRate</title>
+        <title>CriticalFrog</title>
     {% endif %}    
         
     </head>
@@ -23,7 +23,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">FrogRate🐸</a>
+            <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">CriticalFrog🐸</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
