--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,5 +1,15 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <h1>{{ user.username }}</h1>
+{% load static %}
+    <div class="content-section">
+        <div class="media">
+            <div class="media-body">
+            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+            <h2 class="account-heading">{{ user.username }}</h2>
+            <p class="text-secondary">{{ user.email }}</p>
+        </div>
+    </div>
+    <!-- FORM HERE -->
+  </div>
 {% endblock content%}
