--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,14 +2,31 @@
 {% load crispy_forms_tags %}
 {% block content %}
 {% load static %}
+    <h2 class="mb-4 text-center">📖 Personal Information 📖</h2>
     <div class="content-section">
-        <div class="media">
-            <div class="media-body">
-            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-            <h2 class="account-heading">{{ user.username }}</h2>
-            <p class="text-secondary">{{ user.email }}</p>
+        <div class="media mb-5 mt-3">
+            <div class="media-body d-flex justify-content-start border-bottom pb-3">
+                <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+                <div class="d-flex flex-column pt-3">
+                    <h2 class="account-heading">{{ user.username }}</h2>
+                    <p class="text-secondary">{{ user.email }}</p>
+                </div>
+            </div>
         </div>
-    </div>
-    <!-- FORM HERE -->
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="mb-3"> <b>Want to update your information?</b></legend>
+                <div class="mb-4">
+                    {{ u_form|crispy }}
+                </div>
+                <div class="mt-5 mb-5">
+                    {{ p_form|crispy }} 
+                </div>
+            </fieldset>
+            <div class="form-group pt-3 pb-3">
+                <button class="btn btn-outline-success btn-sm" type="submit"><b>Save</b></button>
+            </div>
+        </form>
   </div>
 {% endblock content%}
