--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -5,7 +5,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4"> <h2>Write your review 🐸🖊️</h2></legend>
+                <h2 class="border-bottom mb-4">Write your review 🐸🖊️</h2>
                 {{ form|crispy }} 
             </fieldset>
             <div class="form-group pt-3 pb-3">
