--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    {% for post in posts %}
-    <article class="media content-section">
+{% for post in posts %}
+<article class="media content-section">
         <div class="media-body d-flex border-bottom pb-3">
             <img class="rounded-circle article-img align-self-end" src="{{ post.author.profile.image.url }}" alt="post author image">
             <div class="d-flex flex-column ml-3 mt-5">
@@ -9,12 +9,34 @@
                 <sub class="text-muted mt-auto">{{ post.date_posted|date:"F d, Y"}}</sub>
             </div>
         </div>
-            <div class="media-body">
-                <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-                <p class="article-content">{{ post.content }}</p>
-            </div>
-        </article>
+        <div class="media-body">
+            <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+            <p class="article-content">{{ post.content }}</p>
+        </div>
+    </article>
+{% endfor %}
+{% if is_paginated %}
+    
+    {% if page_obj.has_previous %}
+        <a class="btn btn-outline-secondary mb-4" href="?page=1">«« First</a>
+        <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.previous_page_number }}">« Previous</a>
+    {% endif %} 
+    
+    {% for num in page_obj.paginator.page_range %}
+        {% if page_obj.number == num %}
+            <a class="btn btn-outline-secondary mb-4" href="?page={{ num }}">{{ num }}</a>
+        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+            <a class="btn btn-outline-secondary mb-4" href="?page={{ num }}">{{ num }}</a>
+        {% endif %}
     {% endfor %}
+        
+        {% if page_obj.has_next %}
+            <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.next_page_number }}">Next »</a>
+            <a class="btn btn-outline-secondary mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last »»</a>
+        {% endif %}
+        
+{% endif %}
 {% endblock content%}
-
-
+            
+            
+            
