--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -5,7 +5,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4"> <b>Join FrogRate</b>  🐸🖊️</legend>
+                <legend class="border-bottom mb-4"> <b>Join CriticalFrog</b>  🐸🖊️</legend>
                 {{ form|crispy }} 
             </fieldset>
             <div class="form-group pt-3 pb-3">
